--- a/src/index.css
+++ b/src/index.css
@@ -91,7 +91,6 @@
   font-weight: 900;
 }
 
-
 body {
   background-color: #f8f9fe !important;
   color: #242424;
@@ -106,4 +105,37 @@ input[type='number']::-webkit-inner-spin-button,
 input[type='number']::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
+}
+
+.MuiMonthPicker-root .MuiTypography-root {
+  margin: 0;
+  font-weight: 400;
+  font-size: 1.5rem;
+  line-height: 1.334;
+  letter-spacing: 0em;
+  color: #1976d2;
+  flex: 1 0 33.33%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: unset;
+  background-color: transparent;
+  border: 0;
+  outline: 0;
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 1.75;
+  letter-spacing: 0.00938em;
+  margin: 8px 0;
+  height: 36px;
+  border-radius: 18px;
+  cursor: pointer;
+}
+
+.MuiMonthPicker-root .Mui-selected {
+  color: #fff !important;
+  background-color: #fc6634;
 }
